k8s/hello-world_ingress.yaml
# # basic
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: 5000

# # fan-out
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-resource
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     ingress.kubernetes.io/force-ssl-redirect: "true"
#     ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /hello
#         backend:
#           serviceName: hello-world
#           servicePort: 5000
#       - path: /goodbye
#         backend:
#           serviceName: hello-app
#           servicePort: 8080
#
# # hostname
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-resource
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     ingress.kubernetes.io/force-ssl-redirect: "true"
# spec:
#   rules:
#   - host: hello-world.datalab.rocks
#     http:
#       paths:
#       - backend:
#           serviceName: hello-world
#           servicePort: 5000
#   - host: goodbye-world.datalab.rocks
#     http:
#       paths:
#       - backend:
#           serviceName: hello-app
#           servicePort: 8080
